<resources>
    <string name="app_name">政务服务好差评</string>
    <string name="login_num_hint">请输入您的手机号</string>
    <string name="login_verification_hint">请输入验证码</string>
    <string name="login_button">登录/注册</string>
    <string name="login_btn_verification">获取验证码</string>
    <string name="bottom_mine">我的</string>
    <string name="bottom_my_evaluation">我的评价</string>
    <string name="bottom_all_evaluation">所有评价</string>
    <string name="bottom_service">服务</string>
    <string name="description_img_back">返回键</string>
    <string name="description_img_right">搜索键</string>
    <string name="logout">退出登录</string>
    <string name="update_info">修改信息</string>
    <string name="phoneNumTitle">手机号</string>
    <string name="sexTitle">性别</string>
    <string name="jobTitle">职业</string>
    <string name="birthdayTitle">生日</string>
    <string name="emailTitle">邮箱</string>
    <string name="idTitle">身份证号</string>
    <string name="welcomeTittle">政务服务好差评系统</string>
    <string name="welcomeGreeting">欢迎使用</string>
    <string name="welcomePrompt"><![CDATA[“恶语伤人三春寒，良言一句暖三冬”]]></string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="EvaluationPrompts">请输入你的评价内容\n恶语伤人三春寒，良言一句暖三冬\n不要虚假评价</string>

</resources>