<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/mainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_90"
        android:layout_gravity="bottom"
        android:background="@drawable/home_bottom_mask" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginVertical="@dimen/dp_15"
        android:background="@drawable/home_bottom_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/serviceAtMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_3"
            android:gravity="center"
            android:text="@string/bottom_service"
            android:textColor="@color/color_bottom_tv"
            android:textSize="@dimen/sp_11"
            app:drawableTopCompat="@drawable/selector_one" />


        <TextView
            android:id="@+id/allAtMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_3"
            android:gravity="center"
            android:text="@string/bottom_all_evaluation"
            android:textColor="@color/color_bottom_tv"
            android:textSize="@dimen/sp_11"
            app:drawableTopCompat="@drawable/selector_two" />

        <TextView
            android:id="@+id/myAtMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_3"
            android:gravity="center"
            android:text="@string/bottom_my_evaluation"
            android:textColor="@color/color_bottom_tv"
            android:textSize="@dimen/sp_11"
            app:drawableTopCompat="@drawable/selector_three" />

        <TextView
            android:id="@+id/mineAtMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_3"
            android:gravity="center"
            android:text="@string/bottom_mine"
            android:textColor="@color/color_bottom_tv"
            android:textSize="@dimen/sp_11"
            app:drawableTopCompat="@drawable/selector_four" />

    </LinearLayout>

</FrameLayout>