<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_120"
        android:src="@drawable/national_emblem"
        tools:ignore="ContentDescription" />

    <FrameLayout
        android:id="@+id/loginLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/loginInputElements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_24" />

            <EditText
                android:id="@+id/loginUserNumberEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginHorizontal="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_25"
                android:background="@drawable/bg_edittext"
                android:hint="@string/login_num_hint"
                android:importantForAutofill="no"
                android:lines="1"
                android:paddingHorizontal="@dimen/dp_5"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/plain"
                android:textSize="@dimen/sp_20"
                tools:ignore="TextFields" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginHorizontal="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/bg_edittext"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/loginVerificationEdit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="#00000000"
                    android:hint="@string/login_verification_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingHorizontal="@dimen/dp_5"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/plain"
                    android:textSize="@dimen/sp_20"
                    tools:ignore="TextFields" />

                <Button
                    android:id="@+id/getSMSCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/login_btn_verification"
                    android:textSize="@dimen/dp_20"
                    android:background="@drawable/btn_bg"
                    tools:ignore="SpUsage" />

            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_35"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/login_button"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp_20" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
